Add poweroff information to info screen

--- a/display/info.html
+++ b/display/info.html
@@ -41,6 +41,8 @@
                 <li><b>IP Address:</b> {{IP}}</li>
                 <li><b>Username:</b> {{WHOAMI}}</li>
                 <li><b>GitHub link:</b> {{GITHUB}}</li>
+                <li><b>Reboots:</b> Every hour at half past</li>
+                <li><b>Shuts down:</b>Mon-Thu 19:58, Fri 17:58</li>
             </ul>
             <br>
             <h1>
